# rotee

./: Cargo.toml  README.md  build.rs
lang_tests/: run.rs
lang_tests/tests/: no_eol.expect  no_rotate.expect  no_tee.expect  one_file.expect  prefix.expect  rotate.expect  split_lines.expect  two_files.expect  zero_bufsize.expect  zero_files.expect  zero_filesize.expect
src/: main.rs
